--- a/index.html
+++ b/index.html
@@ -1862,9 +1862,9 @@ span Sign In-->
                 console.log(error)
             }
         };
-        if () {
-            getproductbyid();
-        }
+        if(!{JSON.stringify(id)}){
+   getproductbyid(!{JSON.stringify(id)});
+  }
         const suggestionsDropdown = document.getElementById('suggestionsDropdown');
 
         const suggestions = ['Trip to cabo in July', 'Bags for travel', 'jackets for NYC in winter', 'Clothes for a wedding', 'skiing clothes for men', 'kids clothes', 'swimming costumes for women']; // Example suggestions
