--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <div class="col-md-4">
                 <div class="card h-100">
                     <div class="card-body">
-                        <h5 class="card-title">Getting Started</h5>
-                        <p class="card-text">An introduction to this article collection and how to navigate it.</p>
-                        <a href="articles/getting-started.html" class="btn btn-secondary">Read More</a>
+                        <h5 class="card-title">Gen AI</h5>
+                        <p class="card-text">Discussing Gen AI Wrapper's Moat in the age of foundational models</p>
+                        <a href="articles/gen-ai-moat.html" class="btn btn-secondary">Read More</a>
                     </div>
                 </div>
             </div>
