--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
             left: 0;
             right: 0;
             height: 40px;
+            text-align: center;
             padding: 10px 20px;
             background: black;
             color:#d4d4d4;
         }
         .card{
-            background: #d4d4d4;
+            background: #242327;
+            color: #d4d4d4;
+        }
+        .button{
+            background: white;
+            color: black;
         }
     </style>
     <nav class="navbar navbar-expand-lg">
@@ -45,7 +51,7 @@
                     <div class="card card-body">
                         <h5 class="card-title">Gen AI</h5>
                         <p class="card-text">Discussing Gen AI Wrapper's Moat in the age of foundational models</p>
-                        <a href="articles/gen-ai-moat.html" class="btn btn-secondary">Read More</a>
+                        <a href="articles/gen-ai-moat.html" class="button btn btn-secondary">Read More</a>
                     </div>
                 </div>
             </div>
@@ -55,7 +61,7 @@
                     <div class="card card-body">
                         <h5 class="card-title">Example Article</h5>
                         <p class="card-text">A demonstration of article formatting and structure.</p>
-                        <a href="articles/example-article.html" class="btn btn-secondary">Read More</a>
+                        <a href="articles/example-article.html" class="button btn btn-secondary">Read More</a>
                     </div>
                 </div>
             </div>
@@ -65,7 +71,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Sample Post</h5>
                         <p class="card-text">Another example showing different content layouts.</p>
-                        <a href="articles/sample-post.html" class="btn btn-secondary">Read More</a>
+                        <a href="articles/sample-post.html" class="button btn btn-secondary">Read More</a>
                     </div>
                 </div>
             </div>
@@ -74,7 +80,7 @@
 
     <footer class="container py-3 mt-4">
         <hr>
-        <p class="text-center text-muted">&copy; 2024 My Articles. Hosted on GitHub Pages.</p>
+        <p class="text-center text-muted">&copy; 2025 Krish Shetty</p>
     </footer>
 </body>
 </html>
