--- a/index.html
+++ b/index.html
@@ -3,38 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>brain slopes</title>
+    <title>slopes</title>
     <link href="https://cdn.replit.com/agent/bootstrap-agent-dark-theme.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.css" rel="stylesheet">
 </head>
 <body>
-    <style>
-        body{
-            background:#000;
-        }
-        .navbar-brand{
-            position:fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: 40px;
-            text-align: center;
-            padding: 10px 20px;
-            background: black;
-            color:#d4d4d4;
-        }
-        .card{
-            background: #242327;
-            color: #d4d4d4;
-        }
-        .button{
-            background: white;
-            color: black;
-        }
-    </style>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="index.html">diamond slopes</a>
+            <a class="navbar-brand" href="index.html">slopes</a>
         </div>
     </nav>
     <div style="height:100vh;display:flex;flex-direction:row;justify-content: center;align-items: center;">
